# DC_arclength_study

./: .gitignore  CMakeLists.txt  README.md
examples/: chua.cir  current_source.cir  divider.cir  nonlinear_divider.cir  schmitt1.cir  schmitt2.cir  singular.cir  voltage_source.cir
include/dcsolve/: Circuit.h  Homotopy.h  Lup.h  Mna.h  Nonlinear.h
note/: CPP.md  change.md  cpp_method.md  matlab.md  method.md
src/: Circuit.cpp  Homotopy.cpp  Lup.cpp  Mna.cpp  Nonlinear.cpp  Parser.cpp  homotopy_main.cpp  main.cpp
tests/: test_lup.cpp
